small optimizations for feature_extract, extra condition when r_max of statistic is smaller than user defined r_i

--- a/Example.Rmd
+++ b/Example.Rmd
@@ -78,19 +78,19 @@ D = file.path(base_path, c(
 # extreme = D
 # Plot variables
 
-plotter_sample = F
-plotter_quadrat = F
+plotter_sample = T
+plotter_quadrat = T
 plotter_alltypes = T
 
 plotter = list(plotter_sample, plotter_quadrat, plotter_alltypes)
 
 # Select spatial statistics, or NULL then all inbuild spatial statistics are selected
-selected_spatstat_statistics = list('F')
+selected_spatstat_statistics = NULL
 
 # debug
 
-extreme = D[8]
-# extreme = c(extreme[3],D[8])
+# extreme = D[8]
+extreme = c(extreme[3],D[8])
 samplename = gsub('_cell_seg_data.txt', '', tail(strsplit(extreme, '/')[[1]],1))
 seg_path = extreme
 PhenoOrder = phenotype_simple
